update the home UI

--- a/app/views/layouts/application.html.ejs
+++ b/app/views/layouts/application.html.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Geddy App | This app uses Geddy.js</title>
+    <title>Pos Laju Tracking API | @h4ck4life</title>
     <meta name="description" content="">
     <meta name="author" content="">
     <meta name="viewport" content="width=device-width" />
@@ -35,12 +35,11 @@
           <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
             <span class="i-bar"><i class="icon-chevron-down icon-white"></i></span>
           </a>
-          <%- linkTo('Geddy App', mainsPath, {class: 'brand'}) %>
+          <%- linkTo('Home', mainsPath, {class: 'brand'}) %>
           <div class="nav-collapse">
             <ul class="nav">
               <li class="active"><%- linkTo('Home', mainsPath) %></li>
-              <li><%- linkTo('Tutorial', 'http://geddyjs.org/tutorial') %></li>
-              <li><%- linkTo('Docs', 'http://geddyjs.org/documentation') %></li>
+              <li><%- linkTo('@h4ck4life', 'http://twitter.com/h4ck4life') %></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
