--- a/app/views/main/index.html.ejs
+++ b/app/views/main/index.html.ejs
@@ -1,6 +1,5 @@
-<!-- Lets talk about geddy -->
 <div class="hero-unit geddy-welcome-box">
-  <h1>Hello, World!</h1>
-  <p>You've created a Geddy app and your server is running. If you already know what you're doing, feel free to jump into your app logic, if not...</p>
-  <p><%- linkTo('Lets get you started »', 'http://geddyjs.org/tutorial.html', {class: 'btn btn-primary btn-large'}) %></p>
+  <h1>Pos Laju Tracking API</h1>
+  <p>Simple API to retrieve parcel delivery status from Pos Laju. Feel free to use it.</p>
+  <p><%- linkTo('Here is the demo »', 'http://poslajutracking.herokuapp.com/pos/get/EM417670204MY', {class: 'btn btn-primary btn-large'}) %></p>
 </div>
