Add get pricing API

--- a/app/views/layouts/application.html.ejs
+++ b/app/views/layouts/application.html.ejs
@@ -38,7 +38,7 @@
           <%- linkTo('Home', mainsPath, {class: 'brand'}) %>
           <div class="nav-collapse">
             <ul class="nav">
-              <li class="active"><%- linkTo('Home', mainsPath) %></li>
+              <!-- <li class="active"><%- linkTo('Home', mainsPath) %></li> -->
               <li><%- linkTo('@h4ck4life', 'http://twitter.com/h4ck4life') %></li>
             </ul>
           </div><!--/.nav-collapse -->
