--- a/app/views/main/index.html.ejs
+++ b/app/views/main/index.html.ejs
@@ -3,7 +3,7 @@
   <p>Simple API to retrieve parcel delivery status from Pos Laju. Feel free to use it.</p>
   <p>
   <%- linkTo('Get Tracking Demo »', 'http://poslajutracking.herokuapp.com/track/EM417670204MY', {class: 'btn btn-primary btn-large'}) %>
-  <%- linkTo('Get Pricing Demo »', 'http://poslajutracking.herokuapp.com/price/domestic/0.5/zon/2', {class: 'btn btn-primary btn-large'}) %>
+  <%- linkTo('Get Pricing Demo »', 'http://poslajutracking.herokuapp.com/price/domestic/500/zon/2', {class: 'btn btn-primary btn-large'}) %>
   </p>
 </div>
 <div class="hero-unit">
