beautify the home page

--- a/app/views/main/index.html.ejs
+++ b/app/views/main/index.html.ejs
@@ -5,6 +5,9 @@
   <%- linkTo('Get Tracking Demo »', 'http://poslajutracking.herokuapp.com/track/EM417670204MY', {class: 'btn btn-primary btn-large'}) %>
   <%- linkTo('Get Pricing Demo »', 'http://poslajutracking.herokuapp.com/price/domestic/500/zon/2', {class: 'btn btn-primary btn-large'}) %>
   </p>
+  <br />
+    <a href="https://twitter.com/share" class="twitter-share-button" data-text="Free Pos Laju Tracking API for developers!" data-via="h4ck4life" data-size="large">Tweet</a>
+    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 </div>
 <div class="hero-unit">
   <h3>Tracking</h3>
