--- a/app/views/main/index.html.ejs
+++ b/app/views/main/index.html.ejs
@@ -13,16 +13,16 @@
   <h3>Tracking</h3>
   <p>
     Get Tracking<br />
-   <pre class="text-info">http://poslajutracking.herokuapp.com/track/<b>{parcel id}</b></pre><br />
+   <pre>http://poslajutracking.herokuapp.com/track/<b>{parcel id}</b></pre><br />
     <i>Example:</i><br />
-    <pre class="text-info"><i>http://poslajutracking.herokuapp.com/track/EM417670204MY</i></pre><br />
+    <pre><i>http://poslajutracking.herokuapp.com/track/EM417670204MY</i></pre><br />
   </p>
   <h3>Pricing</h3>
   <p>
     Get Pricing<br />
-    <pre class="text-info">http://poslajutracking.herokuapp.com/price/domestic/<b>{weigh in grams}</b>/zon/<b>{location zon ID}</b></pre><br />
+    <pre>http://poslajutracking.herokuapp.com/price/domestic/<b>{weigh in grams}</b>/zon/<b>{location zon ID}</b></pre><br />
     <i>Example:</i><br />
-    <pre class="text-info">http://poslajutracking.herokuapp.com/price/domestic/250/zon/2</pre><br />
+    <pre>http://poslajutracking.herokuapp.com/price/domestic/250/zon/2</pre><br />
     <b>Zon ID reference:</b><br />
     1 = Dalam Bandar Yang Sama<br />
     2 = Dalam Semenanjung / Sabah /Sarawak<br />
@@ -34,7 +34,7 @@
   <h3>How To Use With jQuery AJAX</h3>
   
   Get Tracking<br />
-  <pre class="text-info">
+  <pre>
 	$.ajax({
 		url: 'http://poslajutracking.herokuapp.com/track/EM417670204MY/<b>json</b>',
 		type: 'GET',
@@ -50,7 +50,7 @@
    </pre>
   <br />
   Get Pricing<br />
-  <pre class="text-info">
+  <pre>
 	$.ajax({
 		url: 'http://poslajutracking.herokuapp.com/price/domestic/950/zon/2/<b>json</b>',
 		type: 'GET',
