Remove core script

--- a/app/views/layouts/application.html.ejs
+++ b/app/views/layouts/application.html.ejs
@@ -14,7 +14,7 @@
 
     <%- scriptLink('/js/jquery.min.js', {type:'text/javascript'}) %>
     <%- scriptLink('/js/bootstrap.min.js', {type:'text/javascript'}) %>
-    <%- scriptLink('/js/core/core.js', {type: 'text/javascript'}) %>
+    <!-- <%- scriptLink('/js/core/core.js', {type: 'text/javascript'}) %> -->
     <!-- <%- scriptLink('/js/models/your_model.js', {type:'text/javascript'}) %> -->
     <%- scriptLink('/js/config/init.js', {type: 'text/javascript'}) %>
 
