--- a/app/views/main/notify.html.ejs
+++ b/app/views/main/notify.html.ejs
@@ -31,7 +31,7 @@
         <div class="span4 offset4 well">
             <legend>Pos Laju Parcel Status Notifier</legend>
             <div class="hide alert alert-error"> <a class="close" data-dismiss="alert" href="#">×</a>Error</div>
-            <form method="POST" action="" accept-charset="UTF-8">
+            <form method="POST" action="/monitor" accept-charset="UTF-8">
                 <input type="text" id="posid" class="span4" name="id" placeholder="Tracking number (ex: EM273357023MY)" required>
                 <input type="email" id="notifyemail" class="span4" name="notifyemail" placeholder="Email address" required>
                 <br />
