--- a/app/views/main/notify.html.ejs
+++ b/app/views/main/notify.html.ejs
@@ -30,17 +30,58 @@
     <div class="row login-box">
         <div class="span4 offset4 well">
             <legend>Pos Laju Parcel Status Notifier</legend>
-            <div class="hide alert alert-error"> <a class="close" data-dismiss="alert" href="#">×</a>Error</div>
-            
+            <div class="hide alert alert-error" id="error"> <a class="close" href="#">×</a><div id="error-msg"></div></div>
+            <div class="hide alert alert-info" id="info"> <a class="close" href="#">×</a><div id="info-msg"></div></div>
+            <form method="POST" id="monitor" action="/monitor" accept-charset="UTF-8">
                 <input type="text" id="posid" class="span4" name="id" placeholder="Tracking number (ex: EM273357023MY)" required>
                 <input type="email" id="notifyemail" class="span4" name="notifyemail" placeholder="Email address" required>
                 <br />
                 <br />
                 <button type="submit" name="submit" class="btn btn-info btn-block">Submit !</button>
-            
+            </form>
         </div>
     </div>
 </div>
 <center>
 <div class="fb-like" data-href="http://poslajutracking.herokuapp.com" data-layout="standard" data-action="like" data-width="280" data-show-faces="true" data-share="false"></div>
 </center>
+
+<script type="text/javascript">
+
+    $('.close').click(function(e){
+        $('.alert').css('display', 'none');
+    });
+
+    $('#monitor').submit(function(e){
+     e.preventDefault();
+     $('button[name=submit]').attr('disabled', 'disabled');   
+    /* Send the data using post and put the results in a div */
+    $.ajax({
+        url: "/monitor",
+        type: "post",
+        data: $('#monitor').serialize(),
+        success: function(data){
+           
+           //console.log(data);
+            if(data.saved === true) {
+                
+                $('#info-msg').text('Successfully submitted!');
+                $('#info').css('display', 'block');
+                
+           } else {
+                
+                $('#error-msg').text(data.debug);
+                $('#error').css('display', 'block');
+           }
+
+           $('button[name=submit]').removeAttr('disabled');
+            
+        },
+        error:function(){
+            
+            $('button[name=submit]').removeAttr('disabled');
+        }
+    });
+
+    });
+</script>
