--- a/app/views/main/notify.html.ejs
+++ b/app/views/main/notify.html.ejs
@@ -36,7 +36,7 @@
                     <input type="email" id="notifyemail" class="span4" name="notifyemail" placeholder="Email address" required>
                     <br />
                     <br />
-                    <button type="submit" name="submit" class="btn btn-info btn-block">Submit !</button>
+                    <button type="submit" name="submit" class="btn btn-info btn-block">OK, start tracking !</button>
                 </form>
             </div>
         </div>
