Modify notify page :)

--- a/app/views/main/notify.html.ejs
+++ b/app/views/main/notify.html.ejs
@@ -43,7 +43,7 @@
     </div>
 </div>
 <center>
-<div class="fb-like" data-href="http://poslajutracking.herokuapp.com" data-layout="standard" data-action="like" data-width="300" data-show-faces="true" data-share="false"></div>
+<div class="fb-like" data-href="http://poslajutracking.herokuapp.com/notify" data-layout="standard" data-action="like" data-width="300" data-show-faces="true" data-share="false"></div>
 </center>
 
 <script type="text/javascript">
