Put back parcel notifier

--- a/app/views/layouts/application.html.ejs
+++ b/app/views/layouts/application.html.ejs
@@ -55,7 +55,7 @@
             <ul class="nav">
               <!-- <li class="active"><%- linkTo('Home', mainsPath) %></li> -->
               <li><%- linkTo('@h4ck4life', 'http://twitter.com/h4ck4life') %></li>
-              <!-- <li><%- linkTo('Parcel Delivery Notifier', '/notify') %></li> -->
+              <li><%- linkTo('Parcel Delivery Notifier', '/notify') %></li>
               <!-- <li><%- linkTo('Android App', 'https://play.google.com/store/apps/details?id=com.li9ht.poslajutracker') %></li> -->
             </ul>
           </div><!--/.nav-collapse -->
