Make the submit btn larger

--- a/app/views/main/notify.html.ejs
+++ b/app/views/main/notify.html.ejs
@@ -38,7 +38,7 @@
                     <input type="text" id="ccnotifyemail" class="span4" name="ccnotifyemail" placeholder="CC Email address" required>
                     <br />
                     <br />
-                    <button type="submit" name="submit" class="btn btn-info btn-block">OK, start tracking !</button>
+                    <button type="submit" name="submit" class="btn btn-info btn-block btn-large">OK, start tracking !</button>
                 </form>
             </div>
         </div>
