--- a/app/views/layouts/application.html.ejs
+++ b/app/views/layouts/application.html.ejs
@@ -1,79 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>
-      <% if(title) { %>
-          <%= title %>
-      <% } else { %>
-          
-      <% } %>
-    </title>
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <meta name="viewport" content="width=device-width" />
+    <head>
+        <meta charset="utf-8">
+        <title>
+        <% if(title) { %>
+        <%= title %>
+        <% } else { %>
 
-    <!-- The HTML5 shim, for IE6-8 support of HTML elements -->
-    <!--[if lt IE 9]>
-      <%- scriptLink('http://html5shim.googlecode.com/svn/trunk/html5.js', {type:'text/javascript'}) %>
-    <![endif]-->
-
-    <%- scriptLink('/js/jquery.min.js', {type:'text/javascript'}) %>
-    <%- scriptLink('/js/bootstrap.min.js', {type:'text/javascript'}) %>
-    <!-- <%- scriptLink('/js/core/core.js', {type: 'text/javascript'}) %> -->
-    <!-- <%- scriptLink('/js/models/your_model.js', {type:'text/javascript'}) %> -->
-    <%- scriptLink('/js/config/init.js', {type: 'text/javascript'}) %>
-
-    <%- styleLink('/css/bootstrap.min.css', {rel:'stylesheet'}) %>
-    <%- styleLink('/css/style.css', {rel:'stylesheet'}) %>
-    <%- styleLink('/css/bootstrap.responsive.min.css', {rel:'stylesheet'}) %>
-
-    <!-- The fav and touch icons -->
-    <link rel="shortcut icon" href="/images/favicon.ico">
-    <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
-
-  </head>
-  <body>
-    <div id="fb-root"></div>
-    <script>(function(d, s, id) {
-      var js, fjs = d.getElementsByTagName(s)[0];
-      if (d.getElementById(id)) return;
-      js = d.createElement(s); js.id = id;
-      js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=190800444378257";
-      fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));</script>
-    <div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="i-bar"><i class="icon-chevron-down icon-white"></i></span>
-          </a>
-          <%- linkTo('Home', mainsPath, {class: 'brand'}) %>
-          <div class="nav-collapse">
-            <ul class="nav">
-              <!-- <li class="active"><%- linkTo('Home', mainsPath) %></li> -->
-              <li><%- linkTo('@h4ck4life', 'http://twitter.com/h4ck4life') %></li>
-              <!--<li><%- linkTo('Parcel Delivery Notifier', '/notify') %></li>-->
-              <!-- <li><%- linkTo('Android App', 'https://play.google.com/store/apps/details?id=com.li9ht.poslajutracker') %></li> -->
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div>
-      </div>
-    </div>
-    <div class="container">
-      <%- render(); %>
-    </div>
-    <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-42194390-1', 'herokuapp.com');
-  ga('send', 'pageview');
-
-</script>
-  </body>
-</html>
+        <% } %>
+        </title>
+        <meta name="description" content="">
+        <meta name="author" content="">
+        <meta name="viewport" content="width=device-width" />
+        <!-- The HTML5 shim, for IE6-8 support of HTML elements -->
+        <!--[if lt IE 9]>
+            <%- scriptLink('http://html5shim.googlecode.com/svn/trunk/html5.js', {type:'text/javascript'}) %>
+        <![endif]-->
+        <%- scriptLink('/js/jquery.min.js', {type:'text/javascript'}) %>
+        <%- scriptLink('/js/bootstrap.min.js', {type:'text/javascript'}) %>
+        <!-- <%- scriptLink('/js/core/core.js', {type: 'text/javascript'}) %> -->
+        <!-- <%- scriptLink('/js/models/your_model.js', {type:'text/javascript'}) %> -->
+        <%- scriptLink('/js/config/init.js', {type: 'text/javascript'}) %>
+        <%- styleLink('/css/bootstrap.min.css', {rel:'stylesheet'}) %>
+        <%- styleLink('/css/style.css', {rel:'stylesheet'}) %>
+        <%- styleLink('/css/bootstrap.responsive.min.css', {rel:'stylesheet'}) %>
+        <!-- The fav and touch icons -->
+        <link rel="shortcut icon" href="/images/favicon.ico">
+        <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
+    </head>
+    <body>
+        <div id="fb-root"></div>
+        <div id="fb-root"></div>
+        <script>(function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=541496225964523";
+        fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));</script>
+        <div class="navbar navbar-fixed-top">
+            <div class="navbar-inner">
+                <div class="container">
+                    <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                    <span class="i-bar"><i class="icon-chevron-down icon-white"></i></span>
+                    </a>
+                    <%- linkTo('Home', mainsPath, {class: 'brand'}) %>
+                    <div class="nav-collapse">
+                        <ul class="nav">
+                            <!-- <li class="active"><%- linkTo('Home', mainsPath) %></li> -->
+                            <li><%- linkTo('@h4ck4life', 'http://twitter.com/h4ck4life') %></li>
+                            <li style="margin: 15px 0 0 20px;"><div class="fb-like" data-href="https://www.facebook.com/poslajutracking" data-layout="standard" data-action="like" data-show-faces="false" data-share="true"></div></li>
+                            <!--<li><%- linkTo('Parcel Delivery Notifier', '/notify') %></li>-->
+                            <!-- <li><%- linkTo('Android App', 'https://play.google.com/store/apps/details?id=com.li9ht.poslajutracker') %></li> -->
+                        </ul>
+                        </div><!--/.nav-collapse -->
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <%- render(); %>
+            </div>
+            <script>
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+            ga('create', 'UA-42194390-1', 'herokuapp.com');
+            ga('send', 'pageview');
+            </script>
+        </body>
+    </html>
