Enable pos notifier

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -47,6 +47,11 @@ body {
   margin: 5px;
 }
 
+.pos-textinput {
+  padding: 15px !important;
+  font-size: 18px !important;
+}
+
 @media (max-width:480px) {
   .hero-unit .pull-right {
     float: none;
