--- a/app/views/errors/not_found.html.ejs
+++ b/app/views/errors/not_found.html.ejs
@@ -1,4 +1,4 @@
-<h2>Error: <%= statusCode %> <%= statusText %></h2>
+<h2>Error Occured: <%= statusCode %> <%= statusText %></h2>
 <% if (message) { %>
 <div><%= message; %></div>
 <% } %>
