Remove requited field from CC email

--- a/app/views/main/notify.html.ejs
+++ b/app/views/main/notify.html.ejs
@@ -35,7 +35,7 @@
                     <input type="text" id="postitle" class="span4 pos-textinput" name="postitle" placeholder="Item name" required>
                     <input type="text" id="posid" class="span4 pos-textinput" name="id" placeholder="Tracking number (ex: EM273357023MY)" required>
                     <input type="email" id="notifyemail" class="span4 pos-textinput" name="notifyemail" placeholder="TO Email address" required>
-                    <input type="text" id="ccnotifyemail" class="span4 pos-textinput" name="ccnotifyemail" placeholder="CC Email address" required>
+                    <input type="text" id="ccnotifyemail" class="span4 pos-textinput" name="ccnotifyemail" placeholder="CC Email address">
                     <br />
                     <br />
                     <button type="submit" name="submit" class="btn btn-info btn-block btn-large">OK, start tracking !</button>
