--- a/app/views/layouts/application.html.ejs
+++ b/app/views/layouts/application.html.ejs
@@ -51,7 +51,7 @@
                         <ul class="nav">
                             <!-- <li class="active"><%- linkTo('Home', mainsPath) %></li> -->
                             <li><%- linkTo('@h4ck4life', 'http://twitter.com/h4ck4life', {target: '_blank'}) %></li>
-                            <li><%- linkTo('Parcel Delivery Notifier', '/notify') %></li>
+                            <!--<li><%- linkTo('Parcel Delivery Notifier', '/notify') %></li> -->
                             <li style="margin: 15px 0 0 20px;"><div class="fb-like" data-href="https://www.facebook.com/poslajutracking" data-layout="standard" data-action="like" data-show-faces="false" data-share="true"></div></li>
                             <!-- <li><%- linkTo('Android App', 'https://play.google.com/store/apps/details?id=com.li9ht.poslajutracker') %></li> -->
                         </ul>
