--- a/app/views/layouts/application.html.ejs
+++ b/app/views/layouts/application.html.ejs
@@ -62,6 +62,9 @@
             <div class="container">
                 <%- render(); %>
             </div>
+            <center>
+                <a href="http://filaventscorp.com" target="_blank"><img src="/img/logo-powered-by-small.png" /></a>
+            </center>
             <script>
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
