fix for pos update

--- a/app/views/main/index.html.ejs
+++ b/app/views/main/index.html.ejs
@@ -2,8 +2,10 @@
   <h1>Pos Laju Tracking API</h1>
   <p>Simple API to retrieve parcel delivery status from Pos Laju. Feel free to use it.</p>
   <p>
-  <%- linkTo('Get Tracking Demo »', 'http://poslajutracking.herokuapp.com/track/LD198280574MY', {class: 'btn btn-primary btn-large'}) %>
+  <%- linkTo('Get Tracking Demo »', 'http://poslajutracking.herokuapp.com/track/EF661748473MY', {class: 'btn btn-primary btn-large'}) %>
+  <!---
   <%- linkTo('Get Pricing Demo »', 'http://poslajutracking.herokuapp.com/price/domestic/500/zon/2', {class: 'btn btn-primary btn-large'}) %>
+  -->
   </p>
   <br />
     <a href="https://twitter.com/share" class="twitter-share-button" data-text="Free Pos Laju Tracking API for developers!" data-via="h4ck4life" data-size="large">Tweet</a>
